feature: adds animation for pagination

--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -135,13 +135,19 @@
       <p>Оставьте свой номер, мы свяжемся с вами в&nbsp;течении дня.</p>
     </div>
     <div class="popup__content">
-      <div class="field field--account uk-width-expand@l uk-margin-bottom">
+      <div class="field field__error field--account uk-width-expand@l uk-margin-bottom">
         <label for="" class="field__title popup__subtitle">Ваш вопрос</label>
         <textarea rows="150"></textarea>
+        <div class="field__message">
+          nika KUKU
+        </div>
       </div>
-      <div class="field field--account uk-margin-bottom">
+      <div class="field field__error field--account uk-margin-bottom">
         <label for="" class="field__title popup__subtitle">Телефон</label>
         <input type="text">
+        <div class="field__message">
+          nika KUKU
+        </div>
       </div>
       <button class="btn" type="button">Отправить</button>
 
