--- a/src/components/pagination.html
+++ b/src/components/pagination.html
@@ -1,5 +1,6 @@
 <div class="pagination uk-flex uk-flex-column">
-  <button class="pagination__btn--large uk-margin-bottom" type="button">
+  <button class="pagination__btn--large uk-margin-bottom" type="button"
+    data-uk-toggle="target: .pagination; cls: pagination--is-loading">
     <span>
       <svg width="16" height="16" fill="#2C0952">
         <use xlink:href="img/symbol/sprite.svg#refresh-ico" />
