--- a/src/components/question.html
+++ b/src/components/question.html
@@ -4,10 +4,13 @@
     <div>
       <span class="question__title">Остались вопросы?</span>
       <p>Оставьте свой номер, мы перезвоним и проконсультруем вас по любому интересующему вопросу.</p>
+      <span class="field__title">Введите свой телефон:</span>
       <div class="uk-flex uk-flex-between uk-flex-column@s">
-        <div class="field">
-          <span class="field__title">Введите свой телефон:</span>
+        <div class="field field__error">
           <input type="text" placeholder="Введите номер телефона">
+          <div class="field__message">
+            nika KUKU
+          </div>
         </div>
         <button type="button" class="btn">Заказать звонок</button>
       </div>
