--- a/src/sass/layout/_checkout.scss
+++ b/src/sass/layout/_checkout.scss
@@ -307,8 +307,10 @@
         position: relative;
         text-align: center;
         background: #f8f8f8;
+        border: 1px solid transparent;
         cursor: pointer;
         transition: transform .15s;
+
 
         @include screen(xl) {
           display: flex;
@@ -337,7 +339,7 @@
         border: 1px solid #FF548C;
         box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
         border-radius: 10px;
-        transform: scale(1.05, 1.1);
+        transform: scale(1.05, 1.05);
 
         span {
           color: #FF548C;
