feature: adds description for iphone 11 pro max

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -32,6 +32,7 @@
 @import "components/seo-msk";
 @import "components/menu";
 @import "components/calc";
+@import "components/description";
 
 @import "layout/header";
 @import "layout/main-features";
