--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -866,6 +866,8 @@
   </div>
 </div>
 
+<a class="scroll-top"></a>
+
 <script defer src="js/library.min.js"></script>
 <script defer src="js/scripts.min.js"></script>
 
