feature: adds new descriptions

--- a/src/sass/components/_description.scss
+++ b/src/sass/components/_description.scss
@@ -468,7 +468,7 @@
         }
 
         @include screen(l) {
-          padding: 180px 90px 0 100px;
+          padding: 180px 90px 50px 100px;
         }
 
         img {
@@ -992,6 +992,758 @@
             margin-bottom: 30px;
             text-transform: uppercase;
             font: 600 32px/44px FuturaPT;
+          }
+        }
+      }
+    }
+  }
+
+  &--iphonese {
+    background-color: #ffffff;
+
+    .description__section {
+      color: #2B2D30;
+
+      span {
+        display: inline-block;
+      }
+
+      p {
+        @include screen(xl) {
+          font: normal 16px/28px Roboto;
+        }
+
+        @include screen(l) {
+          font: normal 18px/28px Roboto;
+        }
+      }
+
+      img {
+        width: 100%;
+        height: auto;
+      }
+
+      &--1 {
+        text-align: center;
+
+        @include screen(xl) {
+          padding: 0 0 20px 0;
+        }
+
+        @include screen(l) {
+          padding: 0 0 50px 0;
+        }
+
+        span {
+          @include screen(xl) {
+            margin-bottom: 30px;
+            font: 500 32px/38px FuturaPT;
+          }
+
+          @include screen(l) {
+            margin-bottom: 25px;
+            font: 500 56px/72px FuturaPT;
+          }
+        }
+
+        p {
+          @include screen(xl) {
+            font: normal 16px/28px Roboto;
+          }
+
+          @include screen(l) {
+            font: normal 18px/32px Roboto;
+          }
+        }
+
+        img {
+          margin: auto;
+          max-width: 631px;
+          max-height: 583px;
+        }
+
+        div {
+          &:first-of-type {
+            @include screen(xl) {
+              margin-bottom: 20px;
+            }
+
+            @include screen(l) {
+              margin-bottom: 30px;
+            }
+          }
+
+          &:last-of-type {
+            @include screen(xl) {
+              padding: 0 10px;
+            }
+
+            @include screen(l) {
+              padding: 0 160px;
+            }
+          }
+        }
+      }
+
+      &--2 {
+        text-align: center;
+
+        @include screen(xl) {
+          padding: 0 0 30px 0;
+        }
+
+        @include screen(l) {
+          padding: 0 0 50px 0;
+        }
+
+        span {
+          margin-bottom: 20px;
+
+          @include screen(xl) {
+            font: 500 24px/32px FuturaPT;
+          }
+
+          @include screen(l) {
+            font: 500 32px/41px FuturaPT;
+          }
+        }
+
+        img {
+          margin: auto;
+          max-width: 922px;
+          max-height: 403px;
+        }
+
+        div {
+          &:first-of-type {
+            @include screen(xl) {
+              margin-bottom: 30px;
+            }
+
+            @include screen(l) {
+              margin-bottom: 40px;
+            }
+          }
+
+          &:last-of-type {
+            @include screen(xl) {
+              padding: 0 10px;
+            }
+
+            @include screen(l) {
+              padding: 0 160px;
+            }
+          }
+        }
+      }
+
+      &--3 {
+        @include screen(xl) {
+          text-align: center;
+          padding: 0 20px 20px;
+        }
+
+        @include screen(l) {
+          padding: 20px 0 0 0;
+        }
+
+        span {
+          @include screen(xl) {
+            margin-bottom: 20px;
+            font: 500 24px/32px FuturaPT;
+          }
+
+          @include screen(l) {
+            margin-bottom: 20px;
+            font: 500 32px/41px FuturaPT;
+          }
+        }
+
+        img {
+          display: block;
+          margin: auto;
+          max-width: 477px;
+          max-height: 609px;
+        }
+
+        div {
+          &:first-of-type {
+            @include screen(xl) {
+              margin-bottom: 20px;
+            }
+          }
+
+          &:last-of-type {
+            @include screen(l) {
+              padding: 0 150px 0 0;
+            }
+          }
+        }
+      }
+
+      &--4 {
+        background-color: #FAFAFA;
+
+        @include screen(xl) {
+          text-align: center;
+          padding: 25px 20px 40px;
+        }
+
+        @include screen(l) {
+          padding: 0 0 40px 100px;
+        }
+
+        span {
+          margin-bottom: 20px;
+
+          @include screen(xl) {
+            font: 500 24px/32px FuturaPT;
+          }
+
+          @include screen(l) {
+            font: 500 32px/41px FuturaPT;
+          }
+        }
+
+        img {
+          margin: auto;
+          max-width: 363px;
+          max-height: 554px;
+        }
+
+        div {
+          &:first-of-type {
+            @include screen(xl) {
+              /* margin-bottom: 20px; */
+            }
+          }
+
+          &:last-of-type {
+            @include screen(l) {
+              padding-left: 50px;
+            }
+          }
+        }
+      }
+
+      &--5 {
+        background-color: #FAFAFA;
+
+        @include screen(xl) {
+          text-align: center;
+          padding: 0 0 40px;
+        }
+
+        @include screen(l) {
+          padding: 0 100px 40px 25px;
+        }
+
+        span {
+          margin-bottom: 20px;
+
+          @include screen(xl) {
+            font: 500 24px/32px FuturaPT;
+          }
+
+          @include screen(l) {
+            font: 500 32px/41px FuturaPT;
+          }
+        }
+
+        img {
+          display: block;
+          margin: auto;
+          max-width: 608px;
+          max-height: 340px;
+        }
+
+        div {
+          &:first-of-type {
+            @include screen(xl) {
+              margin-bottom: 20px;
+            }
+          }
+
+          &:last-of-type {
+            @include screen(xl) {
+              padding: 0 20px;
+            }
+
+            @include screen(l) {
+              padding: 0 0 0 40px;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  &--airpodspro {
+    .description__section {
+      color: #ffffff;
+
+      span {
+        display: inline-block;
+      }
+
+      img {
+        width: 100%;
+        height: auto;
+      }
+
+      &--1 {
+        text-align: center;
+        background-color: #000000;
+
+        @include screen(xl) {
+          padding: 0 0 40px 0;
+        }
+
+        @include screen(l) {
+          padding: 0 260px 90px;
+        }
+
+        img {
+          display: block;
+          margin: auto;
+          max-width: 565px;
+          max-height: 420px;
+        }
+
+        span {
+          margin-bottom: 20px;
+
+          @include screen(xl) {
+            font: 600 32px/37px FuturaPT;
+          }
+
+          @include screen(l) {
+            font: 600 58px/68px FuturaPT;
+          }
+        }
+
+        p {
+          opacity: .8;
+
+          @include screen(xl) {
+            font: 300 16px/28px Roboto;
+          }
+
+          @include screen(l) {
+            font: 300 18px/32px Roboto;
+          }
+        }
+      }
+
+      &--2 {
+        position: relative;
+        text-align: center;
+        background-color: #000000;
+
+        img {
+          display: block;
+          margin: auto;
+          max-width: 1186px;
+          max-height: 825px;
+        }
+
+        span {
+          position: absolute;
+
+          @include screen(xl) {
+            bottom: 40px;
+            left: 0;
+            right: 0;
+            margin: auto;
+            font: 600 24px/26px FuturaPT;
+          }
+
+          @include screen(l) {
+            bottom: 70px;
+            left: 0;
+            right: 0;
+            margin: auto;
+            font: 600 42px/49px FuturaPT;
+          }
+        }
+      }
+
+      &--3 {
+        background-color: #000000;
+
+        @include screen(xl) {
+          padding: 25px 0 20px;
+        }
+
+        @include screen(l) {
+          padding: 45px 0 65px;
+        }
+
+        p {
+          @include screen(xl) {
+            font: 500 18px/28px Roboto;
+          }
+
+          @include screen(l) {
+            font: 500 24px/32px Roboto;
+          }
+        }
+
+        img {
+          display: block;
+          margin: auto;
+          max-width: 364px;
+          max-height: 423px;
+        }
+
+        div {
+          &:first-of-type {
+            @include screen(xl) {
+              padding: 0 20px 0;
+            }
+
+            @include screen(l) {
+              padding: 0 0 0 180px;
+            }
+          }
+
+          &:last-of-type {
+            @include screen(xl) {
+              padding: 0 45px 0;
+              margin-bottom: 30px;
+            }
+
+            @include screen(l) {
+              padding: 0 0 0 50px;
+            }
+          }
+        }
+      }
+
+      &--4 {
+        position: relative;
+        background-color: #000000;
+
+        @include screen(xl) {
+          display: flex;
+          flex-direction: column-reverse;
+          padding: 0 0 30px;
+        }
+
+        img {
+          display: block;
+          margin: auto;
+          max-width: 758px;
+          max-height: 460px;
+        }
+
+        p {
+          @include screen(xl) {
+            font: 500 18px/28px Roboto;
+          }
+
+          @include screen(l) {
+            position: absolute;
+            bottom: 20px;
+            left: 115px;
+            max-width: 420px;
+            font: 500 24px/32px Roboto;
+          }
+        }
+
+        div {
+          &:first-of-type {
+            @include screen(xl) {
+              padding: 20px 20px 0;
+            }
+          }
+        }
+      }
+
+      &--5 {
+        position: relative;
+        background-color: #000000;
+
+        @include screen(xl) {
+          padding: 0 0 40px;
+        }
+
+        img {
+          display: block;
+          max-width: 1299px;
+          max-height: 718px;
+
+          @include screen(xl) {
+            position: absolute;
+            top: 30px;
+            left: 0;
+            right: 0;
+            margin: auto;
+          }
+        }
+
+        p {
+          @include screen(xl) {
+            position: relative;
+            z-index: 1;
+            padding: 0 20px;
+            font: 500 18px/28px Roboto;
+          }
+
+          @include screen(l) {
+            position: absolute;
+            font: 500 24px/32px Roboto;
+          }
+
+          &:first-of-type {
+            @include screen(xl) {
+              padding-bottom: 50%;
+            }
+
+            @include screen(l) {
+              bottom: 150px;
+              left: 120px;
+              max-width: 364px;
+            }
+          }
+
+          &:nth-of-type(2) {
+            @include screen(xl) {
+              margin-bottom: 30px;
+            }
+
+            @include screen(l) {
+              top: 100px;
+              right: 100px;
+              max-width: 420px;
+            }
+          }
+
+          &:last-of-type {
+            @include screen(l) {
+              bottom: 30px;
+              right: 100px;
+              max-width: 420px;
+            }
+          }
+
+          span {
+            color: rgb(39, 204, 0);
+          }
+        }
+      }
+
+      &--6 {
+        background-color: #ffffff;
+        color: #30373D;
+
+        @include screen(xl) {
+          padding: 60px 0 0;
+        }
+
+        @include screen(l) {
+          padding: 99px 0 22px 0;
+        }
+
+        img {
+          display: block;
+          margin: auto;
+          max-width: 435px;
+          max-height: 569px;
+        }
+
+        span {
+          @include screen(xl) {
+            margin-bottom: 20px;
+            font: 700 24px/26px FuturaPT;
+          }
+
+          @include screen(l) {
+            margin-bottom: 5px;
+            font: 700 42px/49px FuturaPT;
+          }
+        }
+
+        p {
+          @include screen(xl) {
+            font: 300 16px/24px Roboto;
+          }
+
+          @include screen(l) {
+            font: 300 18px/32px Roboto;
+          }
+        }
+
+        div {
+          &:first-of-type {
+            @include screen(xl) {
+              padding: 0 50px;
+              margin-bottom: 20px;
+            }
+
+            @include screen(l) {
+              padding: 0 0 0 115px;
+            }
+          }
+
+          &:last-of-type {
+            @include screen(xl) {
+              padding: 0 20px;
+            }
+
+            @include screen(l) {
+              padding: 0 220px 0 50px;
+            }
+          }
+        }
+      }
+
+      &--7 {
+        background-color: #ffffff;
+
+        img {
+          display: block;
+          margin: auto;
+          max-width: 1109px;
+          max-height: 724px;
+        }
+      }
+
+      &--8 {
+        background-color: #ffffff;
+        color: #30373D;
+
+        @include screen(xl) {
+          padding: 57px 0 40px;
+        }
+
+        @include screen(l) {
+          padding: 0 0 117px 0;
+        }
+
+        img {
+          max-width: 450px;
+
+          @include screen(l) {
+            margin: 0 auto auto;
+          }
+        }
+
+        p {
+          @include screen(xl) {
+            font: 500 18px/26px Roboto;
+          }
+
+          @include screen(l) {
+            font: 500 22px/32px Roboto;
+          }
+
+          &:not(:last-of-type) {
+            @include screen(xl) {
+              margin-bottom: 30px;
+            }
+
+            @include screen(l) {
+              margin-bottom: 60px;
+            }
+          }
+        }
+
+        div {
+          &:first-of-type {
+            @include screen(xl) {
+              padding: 0 25px;
+            }
+
+            @include screen(l) {
+              padding: 0 0 0 33px;
+            }
+          }
+
+          &:last-of-type {
+            @include screen(xl) {
+              padding: 0 20px;
+            }
+
+            @include screen(l) {
+              padding: 0 95px 0 0;
+            }
+          }
+        }
+      }
+
+      &--9 {
+        background-color: #000000;
+
+        @include screen(xl) {
+          padding: 0 0 30px;
+        }
+
+
+        div {
+          @include screen(xl) {
+            padding: 0 33px;
+          }
+        }
+
+        img {
+          display: block;
+          margin: auto;
+
+          @include screen(xl) {
+            max-width: 500px;
+          }
+
+          @include screen(l) {
+            max-width: 1105px;
+            max-height: 758px;
+          }
+        }
+      }
+
+      &--10 {
+        position: relative;
+        background-color: #000000;
+
+        @include screen(xl) {
+          padding: 0 20px 50px;
+        }
+
+        @include screen(l) {
+          padding: 0 0 40px 0;
+        }
+
+        img {
+          display: block;
+          margin: auto;
+          max-width: 481px;
+          max-height: 616px;
+
+          @include screen(l) {
+            transform: translateX(165px);
+          }
+        }
+
+        p {
+          @include screen(xl) {
+            font: 500 18px/28px Roboto;
+          }
+
+          @include screen(l) {
+            position: absolute;
+            z-index: 1;
+            top: 100px;
+            left: 120px;
+            max-width: 545px;
+            font: 500 24px/32px Roboto;
+          }
+        }
+
+        div {
+          &:first-of-type {
+            @include screen(xl) {
+              margin-bottom: 30px;
+            }
           }
         }
       }
