feature: add eddits

--- a/src/components/accordion.html
+++ b/src/components/accordion.html
@@ -1,5 +1,5 @@
 <div class="uk-container bg-full-width">
-  <ul class="accordion" uk-accordion>
+  <ul class="accordion .accordion--scroll" uk-accordion>
     <li>
       <a class="uk-accordion-title" href="#">1. Гарантийные обязательства:</a>
       <div class="uk-accordion-content">
