feature: adds seo-features

--- a/src/components/seo.html
+++ b/src/components/seo.html
@@ -1,4 +1,4 @@
-<div class="seo uk-container">
+<div class="seo uk-container bg-full-width">
   <div class="seo__banner">
     <p class="seo__title">Неповторимый дизайн <br>iPhone X – особо прочное <br>стекло с двух сторон</p>
     <picture>
