--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -35,6 +35,7 @@
 @import "components/description";
 @import "components/land";
 @import "components/land-air";
+@import "components/seo-features";
 
 @import "layout/header";
 @import "layout/main-features";
