feature: adds eddits for seo-features

--- a/src/components/seo-features.html
+++ b/src/components/seo-features.html
@@ -21,11 +21,11 @@
             <use xlink:href="img/symbol/sprite.svg#seo-feature-2" />
           </svg>
         </div>
-        <p class="uk-padding-medium-right@l uk-padding-medium-left@l">В течении пары минут вам позвонит менеджер для
+        <p class="uk-padding-medium-right@l uk-padding-medium-left@l ">В течении пары минут вам позвонит менеджер для
           уточнения заказа</p>
       </li>
 
-      <li class="feature--blue uk-flex uk-flex-column uk-flex-middle">
+      <li class="feature--blue uk-flex uk-flex-column uk-flex-middle uk-margin-medium-bottom@s uk-padding-medium-bottom@s">
         <div class="uk-margin-bottom">
           <svg width="48" height="48">
             <use xlink:href="img/symbol/sprite.svg#feature-cash-icon" />
