--- a/src/sass/components/_seo-features.scss
+++ b/src/sass/components/_seo-features.scss
@@ -19,19 +19,21 @@
         position: relative;
 
         &::after {
-          content: "";
-          display: block;
-          position: absolute;
-          right: 0;
-          top: 35px;
-          bottom: 0;
-          width: 32px;
-          height: 32px;
-          border-radius: 50%;
-          box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.12);
-          background: url('../img/pic/ico/arrow-gray.svg') no-repeat, #ffffff;
-          background-size: 10px 16px;
-          background-position: center center;
+          @include screen(l) {
+            content: "";
+            display: block;
+            position: absolute;
+            right: 0;
+            top: 35px;
+            bottom: 0;
+            width: 32px;
+            height: 32px;
+            border-radius: 50%;
+            box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.12);
+            background: url('../img/pic/ico/arrow-gray.svg') no-repeat, #ffffff;
+            background-size: 10px 16px;
+            background-position: center center;
+          }
         }
       }
     }
